--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,8 +10,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  scale: 2.5;
-  overflow: hidden;
+  /* scale: 2.5;
+  overflow: hidden; */
 }
 
 a {
